force-app/main/default/objects/Case/fields/Aboriginal_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Aboriginal_Applicants__c</fullName>
    <formula>Individual_Application_Shadow__r.Aboriginal_Applicants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aboriginal Applicants</label>
    <type>Checkbox</type>
</CustomField>