force-app/main/default/objects/Case/fields/Absence_details__c.field-meta.xml
<CustomField>
    <fullName>Absence_details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence details</label>
    <type>TextArea</type>
</CustomField>