force-app/main/default/objects/Case/fields/Absence_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Absence_Duration_Months__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Absence Duration(Months)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>