force-app/main/default/objects/Case/fields/Absence_end_date__c.field-meta.xml
<CustomField>
    <fullName>Absence_end_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence end date</label>
    <type>Date</type>
</CustomField>