force-app/main/default/objects/Case/fields/Absence_reason__c.field-meta.xml
<CustomField>
    <fullName>Absence_reason__c</fullName>
    <label>Absence reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Absence_reason</valueSetName>
    </valueSet>
</CustomField>