force-app/main/default/objects/Case/fields/Absence_start_date__c.field-meta.xml
<CustomField>
    <fullName>Absence_start_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Absence start date</label>
    <type>Date</type>
</CustomField>