force-app/main/default/objects/Case/fields/Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual Review ID</label>
    <referenceTo>Annual_Review__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>