force-app/main/default/objects/Case/fields/Annual_Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Annual_Review_Period__c</fullName>
    <formula>Annual_Review__r.Annual_review_period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Review Period</label>
    <type>Text</type>
</CustomField>