force-app/main/default/objects/Case/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>