force-app/main/default/objects/Case/fields/Bank_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Bank_Valuation__c</fullName>
    <label>Bank Valuation</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>