force-app/main/default/objects/Case/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Cancellation_Reason</description>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Final payment required</fullName>
            </value>
            <value>
                <fullName>Payment not eligible</fullName>
            </value>
            <value>
                <fullName>Participant Request</fullName>
            </value>
            <value>
                <fullName>Panel Financier Request</fullName>
            </value>
            <value>
                <fullName>Not eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>