force-app/main/default/objects/Case/fields/Cancellation_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Comments__c</fullName>
    <description>Cancellation Reason Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>