force-app/main/default/objects/Case/fields/Capital_growth_component__c.field-meta.xml
<CustomField>
    <fullName>Capital_growth_component__c</fullName>
    <description>Capital Growth Component</description>
    <label>Capital growth component</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>