force-app/main/default/objects/Case/fields/Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Reason__c</fullName>
    <description>Case Close Reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Case Close Reason</inlineHelpText>
    <label>Case Close Reason</label>
    <type>TextArea</type>
</CustomField>