force-app/main/default/objects/Case/fields/Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Full_Name__c</fullName>
    <description>VHF-1821</description>
    <formula>Contact.FirstName &amp; &quot; &quot; &amp;  Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>