force-app/main/default/objects/Case/fields/Contract_of_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_of_Sale_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract of Sale Date</label>
    <type>Date</type>
</CustomField>