force-app/main/default/objects/Case/fields/Contract_of_Sale_status__c.field-meta.xml
<CustomField>
    <fullName>Contract_of_Sale_status__c</fullName>
    <label>Contract of Sale status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>