force-app/main/default/objects/Case/fields/Contract_Sale_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Sale_Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Sale Approved Date</label>
    <type>Date</type>
</CustomField>