force-app/main/default/objects/Case/fields/CS_Transaction_Complete__c.field-meta.xml
<CustomField>
    <fullName>CS_Transaction_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>VHF-2299 - Checkbox to hold Value if Conga Transaction complete on Case</description>
    <label>CS Transaction Complete</label>
    <type>Checkbox</type>
</CustomField>