force-app/main/default/objects/Case/fields/CSEmail1__c.field-meta.xml
<CustomField>
    <fullName>CSEmail1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSEmail1</label>
    <type>Email</type>
</CustomField>