force-app/main/default/objects/Case/fields/CSEmail2__c.field-meta.xml
<CustomField>
    <fullName>CSEmail2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSEmail2</label>
    <type>Email</type>
</CustomField>