force-app/main/default/objects/Case/fields/CSEmail3__c.field-meta.xml
<CustomField>
    <fullName>CSEmail3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSEmail3</label>
    <type>Email</type>
</CustomField>