force-app/main/default/objects/Case/fields/CSName1__c.field-meta.xml
<CustomField>
    <fullName>CSName1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSName1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>