force-app/main/default/objects/Case/fields/CSName2__c.field-meta.xml
<CustomField>
    <fullName>CSName2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CSName2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>