force-app/main/default/objects/Case/fields/CSName3__c.field-meta.xml
<CustomField>
    <fullName>CSName3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Conga Sign Applicant Name</inlineHelpText>
    <label>CSName3</label>
    <length>200</length>
    <type>Text</type>
</CustomField>