force-app/main/default/objects/Case/fields/Current_Loan_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Maturity_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current loan maturity date</label>
    <type>Date</type>
</CustomField>