force-app/main/default/objects/Case/fields/Current_Panel_Financier__c.field-meta.xml
<CustomField>
    <fullName>Current_Panel_Financier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Panel Financier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Current Panel Financier)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>