force-app/main/default/objects/Case/fields/Current_Panel_Financier_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Panel_Financier_Bank_Name__c</fullName>
    <formula>Property__r.Panel_Financier_Name__c</formula>
    <label>Current Panel Financier Bank Name</label>
    <type>Text</type>
</CustomField>