force-app/main/default/objects/Case/fields/Current_PF__c.field-meta.xml
<CustomField>
    <fullName>Current_PF__c</fullName>
    <formula>Current_Panel_Financier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current PF</label>
    <type>Text</type>
</CustomField>