force-app/main/default/objects/Case/fields/Dealing_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealing_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dealing number can be upto 14 character long and can contain alphanumeric characters</inlineHelpText>
    <label>Mortgage Dealing Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>