force-app/main/default/objects/Case/fields/Discharge_Fee__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Fee__c</fullName>
    <label>Discharge Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>