force-app/main/default/objects/Case/fields/Duplicate_Case_Applicant_Names__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Case_Applicant_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Case Applicant Names</label>
    <type>TextArea</type>
</CustomField>