force-app/main/default/objects/Case/fields/Duplicate_Case_Application_Id_s__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Case_Application_Id_s__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Case Application Id&apos;s</label>
    <type>TextArea</type>
</CustomField>