force-app/main/default/objects/Case/fields/Duplicate_Check_Details__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Check Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>