force-app/main/default/objects/Case/fields/DuplicateApplications__c.field-meta.xml
<CustomField>
    <fullName>DuplicateApplications__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DuplicateApplications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>