force-app/main/default/objects/Case/fields/Early_payment_reason__c.field-meta.xml
<CustomField>
    <fullName>Early_payment_reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reason for early payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>