force-app/main/default/objects/Case/fields/Exit_Payment__c.field-meta.xml
<CustomField>
    <fullName>Exit_Payment__c</fullName>
    <label>Exit Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>