force-app/main/default/objects/Case/fields/Final_Schedule_Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Schedule_Settlement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Settlement Date</label>
    <type>Date</type>
</CustomField>