force-app/main/default/objects/Case/fields/Funds_Transferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Funds_Transferred_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date funds were transferred by the SRO Finance team</inlineHelpText>
    <label>Funds Transferred Date</label>
    <type>Date</type>
</CustomField>