force-app/main/default/objects/Case/fields/Home_Loan_Refinanced__c.field-meta.xml
<CustomField>
    <fullName>Home_Loan_Refinanced__c</fullName>
    <label>Home Loan Refinanced</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>