force-app/main/default/objects/Case/fields/Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>