force-app/main/default/objects/Case/fields/Individual_Application_Shadow__c.field-meta.xml
<CustomField>
    <fullName>Individual_Application_Shadow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Introduced with VHF-97 to access expiry date from the case object</description>
    <label>Individual_Application_Shadow</label>
    <referenceTo>Individual_Application_Shadow__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>