force-app/main/default/objects/Case/fields/IsFinalApp_Settled__c.field-meta.xml
<CustomField>
    <fullName>IsFinalApp_Settled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFinalApp_Settled</label>
    <type>Checkbox</type>
</CustomField>