force-app/main/default/objects/Case/fields/Last_Calculation_date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Calculation_date_time__c</fullName>
    <description>Last Calculation date/time</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Calculation date/time</label>
    <type>DateTime</type>
</CustomField>