force-app/main/default/objects/Case/fields/Latest_Market_Value_LMV__c.field-meta.xml
<CustomField>
    <fullName>Latest_Market_Value_LMV__c</fullName>
    <description>Latest Market Value(LMV)</description>
    <label>Latest Market Value (LMV)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>