force-app/main/default/objects/Case/fields/Loan_Increase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Increase_Amount__c</fullName>
    <label>Loan Increase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>