force-app/main/default/objects/Case/fields/Loan_increased_requested_date__c.field-meta.xml
<CustomField>
    <fullName>Loan_increased_requested_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loan Increase Requested Date</label>
    <type>Date</type>
</CustomField>