force-app/main/default/objects/Case/fields/Maximum_payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_payment_amount__c</fullName>
    <label>Maximum payment amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>