force-app/main/default/objects/Case/fields/Minimum_Loan_Increase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Loan_Increase_Amount__c</fullName>
    <description>Minimum Loan Increase Amount</description>
    <label>Minimum Loan Increase Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>