force-app/main/default/objects/Case/fields/Minimum_payment_amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_payment_amount__c</fullName>
    <label>Minimum payment amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>