force-app/main/default/objects/Case/fields/Mortgage_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Discharge_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Discharge Date</label>
    <type>Date</type>
</CustomField>