force-app/main/default/objects/Case/fields/Mortgage_Discharge_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Discharge_Date_Text__c</fullName>
    <formula>text(DAY( Mortgage_Discharge_Date__c )) +&apos; &apos;+CASE( MONTH( Mortgage_Discharge_Date__c ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;, 4, &quot;April&quot;, 5, &quot;May&quot;, 6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, &quot;December&quot;)+&apos; &apos;+ Text(YEAR( Mortgage_Discharge_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mortgage_Discharge_Date_Text</label>
    <type>Text</type>
</CustomField>