force-app/main/default/objects/Case/fields/Mortgage_Re_registration_date__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Re_registration_date__c</fullName>
    <description>Mortgage Re-registration date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Mortgage Re-registration date</label>
    <type>Date</type>
</CustomField>