force-app/main/default/objects/Case/fields/New_Panel_Financier__c.field-meta.xml
<CustomField>
    <fullName>New_Panel_Financier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Panel Financier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refinance(New Panel Financier)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>