force-app/main/default/objects/Case/fields/New_PF_TEXT__c.field-meta.xml
<CustomField>
    <fullName>New_PF_TEXT__c</fullName>
    <formula>New_Panel_Financier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New PF</label>
    <type>Text</type>
</CustomField>