force-app/main/default/objects/Case/fields/New_PFO_Refinance__c.field-meta.xml
<CustomField>
    <fullName>New_PFO_Refinance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>New PFO(Refinance)</description>
    <label>New PFO(Refinance)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>