force-app/main/default/objects/Case/fields/Not_Confirmed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Confirmed_Reason__c</fullName>
    <description>value copied from refinance confirmation record</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Confirmed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>