force-app/main/default/objects/Case/fields/Number_of_days_awaiting_contract_of_sale__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days_awaiting_contract_of_sale__c</fullName>
    <formula>ABS(Today()- Contract_Sale_Approved_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days awaiting contract of sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>