force-app/main/default/objects/Case/fields/Original_SEM_repayment__c.field-meta.xml
<CustomField>
    <fullName>Original_SEM_repayment__c</fullName>
    <label>Original SEM repayment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>