force-app/main/default/objects/Case/fields/Orignal_SEM_Payment__c.field-meta.xml
<CustomField>
    <fullName>Orignal_SEM_Payment__c</fullName>
    <description>Orignal SEM Payment</description>
    <label>Orignal SEM Payment</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>