force-app/main/default/objects/Case/fields/Other_Amounts_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Other_Amounts_Outstanding__c</fullName>
    <formula>Discharge_Fee__c +  Payout_chargeable_valuation_fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Amounts Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>