force-app/main/default/objects/Case/fields/Overlapping_Absence__c.field-meta.xml
<CustomField>
    <fullName>Overlapping_Absence__c</fullName>
    <formula>IF(ISPICKVAL( Origin , &quot;Participant Portal&quot;),FALSE,
OR(
AND(Absence_start_date__c&lt;Annual_Review__r.Annual_Review_Start_Date__c,Absence_end_date__c &gt;= Annual_Review__r.Annual_Review_Start_Date__c ),
AND(Absence_start_date__c&lt;(ADDMONTHS(Annual_Review__r.Annual_Review_Start_Date__c,12)-1),Absence_end_date__c &gt;= (ADDMONTHS(Annual_Review__r.Annual_Review_Start_Date__c,12)-1) 
)
)
)</formula>
    <label>Overlapping Absence</label>
    <type>Checkbox</type>
</CustomField>