force-app/main/default/objects/Case/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <formula>If(BEGINS((OwnerId), &apos;005&apos;),Owner:User.FirstName + &quot; &quot; + Owner:User.LastName, Owner:Queue.QueueName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner</label>
    <type>Text</type>
</CustomField>