force-app/main/default/objects/Case/fields/Panel_Finance_Officer_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Panel_Finance_Officer_FirstName__c</fullName>
    <description>For Post settlement cases with linked property</description>
    <formula>Property__r.Contract.Panel_Finance_Officer_FirstName__c</formula>
    <label>Panel Finance Officer FirstName</label>
    <type>Text</type>
</CustomField>