force-app/main/default/objects/Case/fields/Panel_Financier_Shared_Mailbox__c.field-meta.xml
<CustomField>
    <fullName>Panel_Financier_Shared_Mailbox__c</fullName>
    <description>Used for setting recipient on case notification emails to panel financiers</description>
    <formula>Property__r.Panel_Financier_Name__r.Shared_Mailbox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Panel Financier Shared Mailbox</label>
    <type>Text</type>
</CustomField>