force-app/main/default/objects/Case/fields/Participant_2_Income__c.field-meta.xml
<CustomField>
    <fullName>Participant_2_Income__c</fullName>
    <label>Participant 2 Income</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>