force-app/main/default/objects/Case/fields/Participant_3_Income__c.field-meta.xml
<CustomField>
    <fullName>Participant_3_Income__c</fullName>
    <label>Participant 3 Income</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>