force-app/main/default/objects/Case/fields/Participant_Emails__c.field-meta.xml
<CustomField>
    <fullName>Participant_Emails__c</fullName>
    <description>Used in Conga[VHF-3025]</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>