force-app/main/default/objects/Case/fields/Participant_Names__c.field-meta.xml
<CustomField>
    <fullName>Participant_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>