force-app/main/default/objects/Case/fields/Participation_Agreement_Option__c.field-meta.xml
<CustomField>
    <fullName>Participation_Agreement_Option__c</fullName>
    <label>Participation Agreement Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With eSignature</fullName>
            </value>
            <value>
                <fullName>Without eSignature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>