force-app/main/default/objects/Case/fields/Payment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Comments</label>
    <type>TextArea</type>
</CustomField>