force-app/main/default/objects/Case/fields/Payment_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>