force-app/main/default/objects/Case/fields/Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payout_Amount__c</fullName>
    <label>Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>