force-app/main/default/objects/Case/fields/Payout_chargeable_valuation_fees__c.field-meta.xml
<CustomField>
    <fullName>Payout_chargeable_valuation_fees__c</fullName>
    <label>Payout chargeable valuation fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>