force-app/main/default/objects/Case/fields/Please_specify__c.field-meta.xml
<CustomField>
    <fullName>Please_specify__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Please specify</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>