force-app/main/default/objects/Case/fields/Please_Specify_the_reason_for_refinance__c.field-meta.xml
<CustomField>
    <fullName>Please_Specify_the_reason_for_refinance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Please Specify the reason for refinance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>