force-app/main/default/objects/Case/fields/Program_Exit_Document__c.field-meta.xml
<CustomField>
    <fullName>Program_Exit_Document__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; +
&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=[Program+Exit+Document]a0M5P000001ZpG9UAK&quot;+
&quot;&amp;DS7=12&quot;+
&quot;&amp;qmode=SendEmail&quot;+
&quot;&amp;SC0=1&amp;SC1=SalesforceFile&amp;apdf=0&amp;FP0=1&quot;+
&quot;&amp;EmailTemplateId=00X5P000000cDcCUAU&quot; +
&quot;&amp;EmailRelatedToId=&quot; + Id + 
&quot;&amp;EmailFromId=0D22P00000000qWSAQ&quot; +
&quot;&amp;EmailToId=&quot;+ Account.PersonContact.Id +
&quot;&amp;EmailAdditionalTo=&quot;+  Participant_Emails__c +
&quot;&amp;queryid=[Property]a0E5P000000e4UkUAI&quot;</formula>
    <label>Program Exit Document</label>
    <type>Text</type>
</CustomField>