force-app/main/default/objects/Case/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <description>VHF-1821</description>
    <formula>Property__r.Property_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>