force-app/main/default/objects/Case/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <description>Property ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>