force-app/main/default/objects/Case/fields/Property_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Property_Market_Value__c</fullName>
    <description>Property Market Value</description>
    <label>Property Market Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>