force-app/main/default/objects/Case/fields/Property_Sale_Comments__c.field-meta.xml
<CustomField>
    <fullName>Property_Sale_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>