force-app/main/default/objects/Case/fields/Property_Sale_Payout_Document__c.field-meta.xml
<CustomField>
    <fullName>Property_Sale_Payout_Document__c</fullName>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=[Payout+Detail]a0M5P000001eOnUUAU&quot; + 
&quot;&amp;queryid=[Property]a0E5P000000e4UkUAI&quot; +
&quot;&amp;qmode=SendEmail&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;sc1=SalesforceFile&quot; + 
&quot;&amp;apdf=0&quot; + 
&quot;&amp;fp0=1&quot; +
&quot;&amp;EmailTemplateId=00X5P000000cQFFUA2&quot; +
&quot;&amp;EmailRelatedToId=&quot; + Id +
&quot;&amp;EmailFromId=0D22P00000000qWSAQ&quot; +
&quot;&amp;EmailToId=&quot;+ Account.PersonContact.Id +
&quot;&amp;EmailAdditionalTo=&quot;+ Participant_Emails__c</formula>
    <label>Property Sale Payout Document</label>
    <type>Text</type>
</CustomField>